[package]
name = "obsevers"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.5"
rand = "0.8.4"
plotters = {git="https://github.com/plotters-rs/plotters", branch= "master"}
statrs = {git="https://github.com/statrs-dev/statrs", branch= "master"}
approx = "0.5.1"
debug_print = "1.0.0"
lapack = "0.19.0"
